tests/error/comptime_expr_errors/sig_mismatch.py
from pytket import Circuit

from guppylang.decorator import guppy
from guppylang.std.quantum import qubit

circ = Circuit(2)
circ.X(0)
circ.Y(1)

@guppy.pytket(circ)
def guppy_circ(q: qubit) -> None: ...

@guppy
def foo(q: qubit) -> None:
    guppy_circ(q)


guppy.compile(foo)